samples/_failures_safe/1761374587_5949e5_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_2f9e6ba9.c: In function ‘main’:
./samples/SAFE/__tmp_2f9e6ba9.c:163:12: error: missing terminating " character
  163 |     printf("Enter edges as '
      |            ^~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_2f9e6ba9.c:163:5: error: expected expression at end of input
  163 |     printf("Enter edges as '
      |     ^~~~~~
./samples/SAFE/__tmp_2f9e6ba9.c:163:5: error: expected declaration or statement at end of input
